2014-12-25  Chris Rorvick  <chris@rorvick.com>

	Use xdrer specialization for std::pair

2014-12-25  Chris Rorvick  <chris@rorvick.com>

	Rename namespace: `detail' => `impl'

2014-12-24  Chris Rorvick  <chris@rorvick.com>

	Split header out into many

	Each STL container added pulls in another standard library
	header.  This is a waste of time when building if someone has
	otherwise been careful to only pull in only what is needed.
	Split the definitions out by supported container to alleviate
	this issue.

2014-12-23  Chris Rorvick  <chris@rorvick.com>

	Add support for T::xdr(XDR*)

	Route the encoding/decoding through a template class and have
	the primary implementation call into T::xdr(XDR*) and write
	specializations for everything else.  Actually, not *everything*
	yet, but eventually.

2014-12-22  Chris Rorvick  <chris@rorvick.com>

	Add support for std::list

	Using the iterator interface in the vector encode/decode logic
	allows it to work on lists, too.

2014-12-22  Chris Rorvick  <chris@rorvick.com>

	Remove const-value overload

	This seemed like a nice convenience (e.g., it made possible to
	use the overload for std::pair when encoding maps), but it is
	also problematic. In one case it was recursing into itself,
	causing the stack to overflow.

	Remove this overload and fix up the map-encoding dependency on
	it.  If there is a better way to do this, maybe add it back
	later.

2014-12-21  Chris Rorvick  <chris@rorvick.com>

	Move everything into `xdrpp' namespace

2014-12-21  Chris Rorvick  <chris@rorvick.com>

	Move const value encoder to top

	When the code is added to a namespace this stopped working
	(i.e., the compiler could not figure out what to do if the
	passed value was const.) Moving this definition to the top of
	the header fixes the problem.  I am not sure if this is
	resolving a real issue with regard to the spec, or if it is just
	a weird thing with GCC.  I might try to figure this out later.
